# tasks_app_test

./: .gitignore  CMakeLists.txt  Dockerfile  README.MD  check_time.cpp  main.cpp
include/: Add.cpp  Add.h  CMakeLists.txt  Command.cpp  Command.h  Delete.cpp  Delete.h  Done.cpp  Done.h  Select.cpp  Select.h  Task.cpp  Task.h  Update.cpp  Update.h  global_var.cpp  global_var.h
